Fixed facet textarea vertical alignment.

--- a/public/themes/custom/hdbt_subtheme/src/scss/06_components/forms/_facets.scss
+++ b/public/themes/custom/hdbt_subtheme/src/scss/06_components/forms/_facets.scss
@@ -61,6 +61,7 @@
   .select2-selection--multiple .select2-search textarea {
     margin-left: 10px;
     margin-bottom: 6px;
+    margin-top: 8px;
   }
 }
 
